example page prismic.io

--- a/src/app/modules/help/help.component.html
+++ b/src/app/modules/help/help.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/page/super-titre-1">Super titre</a>
 <div id="prismic-help">
   <header>
     <nav [ngSwitch]="repositoryInfos.isConfigured">
@@ -148,7 +149,7 @@ export class PageModule {{ '{' }}}</code></pre>
     </p>
     <div class="source-code">
       <pre><code class="css">// In src/app/modules/page/page.component.css
-      
+
 .page-content {{ '{' }}
   text-align: center;
   margin-top: 50px;
