--- a/src/app/modules/help/help.component.html
+++ b/src/app/modules/help/help.component.html
@@ -1,4 +1,5 @@
 <a routerLink="/page/super-titre-1">Super titre</a>
+Test travis 1
 <div id="prismic-help">
   <header>
     <nav [ngSwitch]="repositoryInfos.isConfigured">
